test/typeCheckTest/pass/test13.ic
class TestBreak {
	void main (string [] args) {
		while (true) {
			break;
		}
	}
}