test/typeCheckTest/fail/test36.ic
class BadNotEqual {
	void main (string [] args) {
		boolean b = true != "what?";
	}
}